feature: Desarrollo de feature de Editar perfil: Se confirmaron las reglas de negocio